--- a/src/include/_header_front.html
+++ b/src/include/_header_front.html
@@ -39,7 +39,7 @@
         <ul class="hgroup_util_list">
             <li>
                 <div class="hgroup_util_item_wrap">
-                    <a href="#" class="hgroup_util_item">user type</a>
+                    <a href="#" class="hgroup_util_item">user</a>
                 </div>
             </li>
             <li><a href="#" class="util_ico_menu"><span class="hdtext">로그아웃</span></a></li>
