--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -85,9 +85,11 @@ html:not(.touchmode) {
         .hgroup_util_menu_list_wrap{display:block;}
     }
 }
-.hgroup_util_item{display:inline-block;position:relative;border-radius: 4px;background-color: #f5f5f5;white-space: nowrap;height:24px;line-height:24px;padding:0 23px 0 10px;font-size:14px;color:#5f637a;
-    &:after{display:block;content:'';width:10px;height:10px;background:url("../images/ico_combo.png") no-repeat 0 0/100% auto;position:absolute;top:50%;right:10px;transform: translateY(-50%);}
-    
+.hgroup_util_item{display:inline-block;position:relative;border-radius: 4px;background-color: #f5f5f5;white-space: nowrap;height:24px;line-height:24px;padding:0 10px;font-size:14px;color:#5f637a;
+  &.type2{
+    padding:0 23px 0 10px;
+      &:after{display:block;content:'';width:10px;height:10px;background:url("../images/ico_combo.png") no-repeat 0 0/100% auto;position:absolute;top:50%;right:10px;transform: translateY(-50%);}
+    }
 }
 .util_ico_menu{display:inline-block;width:24px;height:24px;background:url("../images/ic_logout_off@2x.png") no-repeat 0 0/100% auto;}
 .hgroup_util_menu_list_wrap{
@@ -265,3 +267,48 @@ html:not(.touchmode) {
   }
   
   
+  /* popup */
+  
+/* 공통 popup */
+.popup_wrap {position: fixed;top: 0;left: 0;width: 100%;height: 100%;opacity:0;transition:.4s;z-index: 130;display: none;align-items: center;justify-content: center;min-width: 280px;overflow: hidden;flex-wrap: wrap;box-sizing:border-box;padding:0 20px;
+  &.active {display: flex;}
+  &.motion_end{opacity:1;}
+}
+
+.popup_item {
+  box-sizing: border-box;z-index: 20;width:1080px;margin: 40px auto;max-height: calc(100% - 80px);background:#fff;position: relative;display: flex;border-radius:20px;flex-direction: column;border-radius: 20px;
+  box-shadow: 6px 6px 10px 0 rgba(17, 16, 66, 0.2);
+  &:after{display:block;content:'';height:20px;flex:0 0 20px;}
+}
+
+.layer_wrap_parent{
+  &.has_active_multi{
+      .bg_dim{visibility: hidden;}
+      .popup_wrap{
+          &.active{
+              &.active_first{
+                  .bg_dim{visibility: visible;}
+              }
+          }
+      }
+  }
+}
+
+
+.bg_dim {display: block;width: 100%;height: 100%;position: fixed;top: 0;left: 0;z-index: 0;background: #222;opacity:.6;
+}
+
+.popup_title_low {text-align: center;flex: 0;padding: 16px 16px 0 40px;position: relative; 
+  display:flex;justify-content: space-between;
+}
+
+.popup_title {font-size: 18px;color: #2b2b2b;padding: 34px 0 16px;font-weight: 700;
+  font-size: 22px;
+  line-height: 1;
+  letter-spacing: -0.44px;
+  color: #313444;
+}
+
+.btn_popup_close{display:block;width:40px;height:40px;background:url("../images/ic_popup_close@2x.png") no-repeat 0 0/100% auto;}
+
+.popup_content_low{flex:1;min-height:0;position:relative;overflow:hidden;overflow-y:overlay;padding:0 40px 60px;}
