--- a/src/assets/scss/_contents.scss
+++ b/src/assets/scss/_contents.scss
@@ -27,6 +27,14 @@
     &.color_focus{
         .combo_target{border-color:#9747ff;}
     }
+
+    &.medium{
+        .combo_target{height:40px;line-height:38px; font-size:14px;color:#626888; min-width:150px;
+            &:after{
+                background:url("../images/ic_arrow_dgb@2x.png") no-repeat 0 0/100% auto; width:16px;height:16px;
+            }
+        }
+    }
 }
 .combo_target{
     font-size:12px;box-sizing:border-box;color:#5f637a;padding:0 24px 0 10px;border:1px solid #ccc;border-radius:4px;display:block;position:relative;white-space: nowrap;
@@ -46,6 +54,9 @@
     &.reverse_pos{
         transform: translateY(-100%);
         border: 1px solid #ccc;border-bottom:0;border-radius:4px 4px 0 0;
+    }
+    &.medium{
+        .combo_option{font-size:14px;}
     }
 }
 .combo_option_scroll{overflow:overlay;position:relative;
@@ -616,7 +627,20 @@ input.props_form{
     .btn_formbox_submit{flex:1;}
 }
 
+.screen_guide_wrap{position:relative;}
+.screen_guide_text_wrap{text-align: center;position:absolute;top:21%;left:0;width:100%;}
+.screen_guide_text{
+    font-size: 16px;
+    font-weight: 500;
+    color: #313444;
+    &:before{display:inline-block;content:'';background:url("../images/ic_exclude@2x.png") no-repeat 0 0/100% auto;flex:0 0 16px;width:16px;height:16px;margin-right:5px;position:relative;top:2px;}
+}
+.screen_guide_wrap{margin-top:50px;}
 
 @media (min-height:1080px){
     .cform_content_wrap{position:static;}
+}
+
+@media (max-width:1440px){
+    .screen_guide_text_wrap{top:20%;}
 }
