--- a/src/include/_header_admin.html
+++ b/src/include/_header_admin.html
@@ -39,7 +39,23 @@
         <ul class="hgroup_util_list">
             <li>
                 <div class="hgroup_util_item_wrap">
-                    <a href="#" class="hgroup_util_item">user</a>
+                    <a href="#" class="hgroup_util_item type2">admin</a>
+                    <div class="hgroup_util_menu_list_wrap">
+                        <ul class="hgroup_util_menu_list">
+                            <li>
+                                <a href="javascript:;" class="hgroup_util_menu">
+                                    <i class="hgroup_util_ico ico_edit"></i>
+                                    <span class="hgroup_util_text">정보수정</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="hgroup_util_menu">
+                                    <i class="hgroup_util_ico ico_manage"></i>
+                                    <span class="hgroup_util_text">사용자 관리</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </li>
             <li><a href="#" class="util_ico_menu"><span class="hdtext">로그아웃</span></a></li>
@@ -47,50 +63,3 @@
    </div>
    <div class="bg_twonav"></div>
 </header>
-
-<!-- popup -->
-<div class="popup_wrap type2" id="user_popup">
-    <div class="bg_dim"></div>
-    <div class="popup_item">
-        <div class="popup_title_low type2">
-            <h2 class="popup_title">사용자 정보</h2>
-            <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
-        </div>
-        <div class="popup_content_low">
-            사용자 정보<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.
-        </div>
-    </div>
-</div>
-<div class="popup_wrap type2" id="user_modify_popup">
-    <div class="bg_dim"></div>
-    <div class="popup_item">
-        <div class="popup_title_low type2">
-            <h2 class="popup_title">사용자 정보 수정</h2>
-            <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
-        </div>
-        <div class="popup_content_low">
-            사용자 정보 수정<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.
-        </div>
-    </div>
-</div>
-<!-- // popup -->
