--- a/src/include/_header.html
+++ b/src/include/_header.html
@@ -69,50 +69,8 @@
    <div class="bg_twonav"></div>
 </header>
 <!-- popup -->
-<div class="popup_wrap skin2 widtype2" id="user_popup">
-    <div class="bg_dim"></div>
-    <div class="popup_item">
-        <div class="popup_title_low">
-            <h2 class="popup_title">사용자 정보</h2>
-            <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
-        </div>
-        <div class="popup_content_low">
-            사용자 정보<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.
-        </div>
-    </div>
-</div>
-<div class="popup_wrap skin2 widtype2" id="user_modify_popup">
-    <div class="bg_dim"></div>
-    <div class="popup_item">
-        <div class="popup_title_low">
-            <h2 class="popup_title">사용자 정보 수정</h2>
-            <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
-        </div>
-        <div class="popup_content_low">
-            사용자 정보 수정<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.<br>
-            내용이 들어갑니다.
-        </div>
-    </div>
-</div>
+@@include('_user_popup.html')
+@@include('_user_popup_modify.html')
 <!-- // popup -->
 <script>
     // 선언
