--- a/src/assets/scss/_tui-date-picker.scss
+++ b/src/assets/scss/_tui-date-picker.scss
@@ -319,7 +319,7 @@
  .tui-datepicker-body .tui-timepicker, .tui-datepicker-footer .tui-timepicker {
      width: 274px;
      position: static;
-     padding: 20px 46px 20px 47px;
+     padding: 20px 26px 20px 27px;
      border: 0
  }
  
@@ -360,7 +360,7 @@
      vertical-align: top;
  }
  
-.ui_picker_render.reverse_render .tui-datepicker{bottom:45px;}
+.ui_picker_render.reverse_render .tui-datepicker{bottom:34px;}
 
 //  .tui-datepicker-selector-button.tui-is-checked .tui-ico-date, .tui-datepicker-input.tui-has-focus .tui-ico-date {
 //      background-position: -17px -14px
@@ -380,10 +380,10 @@
      position: relative;
      display: inline-block;
      box-sizing: border-box;
-     width: 152px;
+     width: 160px;
      height: 30px;
      vertical-align: top;
-     padding: 6px 10px;
+     padding: 0;
     border-radius: 4px;
     border: solid 1px #ddd;
     background-color: #fff;
@@ -398,20 +398,23 @@
  .tui-datepicker-input > input {
      width: 100%;
      height: 100%;
-     padding: 6px 27px 6px 0;
+     padding: 6px 27px 6px 10px;
      font-size: 12px;
      line-height: 14px;
      vertical-align: top;
      border: 0;
      color: #5f637a;
      line-height:1;
+     position:relative;
+     background:transparent; z-index:2;
+     cursor: pointer;
  }
  
  .tui-datepicker-input > .tui-ico-date {
      position: absolute;
      top: 50%;
      right: 8px;
-     transform: translateY(-50%);
+     transform: translateY(-50%);z-index:0;
  }
  
  .tui-datepicker-input.tui-has-focus {
