--- a/src/include/_head.html
+++ b/src/include/_head.html
@@ -7,8 +7,11 @@
 	<script src="./assets/js/jquery-3.4.1.min.js"></script>
 	<script src="./assets/js/dynamicListener.min.js"></script>
 	<script src="./assets/js/swiper.min.js"></script>
-	<script src="./assets/js/tui-date-picker.js"></script>
-	<!-- <script src="./assets/js/tui-time-picker.js"></script> -->
+	<script src="./assets/js/comboTreePlugin.js"></script>
+	<!-- <script src="./assets/js/tui-date-picker.js"></script>
+	<script src="./assets/js/tui-time-picker.js"></script> -->
+<script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.js"></script>
+<script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.js"></script>
 	<script src="./assets/js/ui.js"></script>
 
 	<title></title>
